
 - Do not output a BG color in style string for transparent brushes (bug 693)

 - mitab_tabfile.cpp: Several fixes for TABFile::Open() when loading the
   tabfile fails. (provided by Stephen Cheesman). 

 - mitab_mapfile.cpp: Fixed error return value in LoadNextMatchingObjectBlock()
   per http://bugzilla.remotesensing.org/show_bug.cgi?id=615. NFW


Version 1.3.0 (2004-07-07)
--------------------------

 - Use tab as default delimiter (if none is explicitly specified) when 
   reading .MIF/.MID files (Anthony D, bug 37)  We still generate new files 
   using comma as delimiter.

 - C API: Added mitab_c_get_feature_count() and mitab_c_get_field_as_double(),
   added ability to create a feature of type TABFC_NoGeom (Anthony D)

 - Added support for reading affine coordsys parameters in extended 
   .map header block of v500+  (Anthony D, bug 41)

 - Added mitab_c_getlibversion() to C API. (Uffe K. - bug 21)

 - Write 3D geometries to MIF/tab as if they were 2D. NFW

 - Flush out .mif header on Close() if no features written. NFW

 - Fixed previous flushing logic to only do so for writable files. NFW

 - Removed obsolete mif2mif.cpp mif2tab.cpp mif2tabbatch.cpp.  They are
   all replaced by the more up to date tab2tab.cpp

 - Modified the OGR creation logic to properly support creating single
   files sets rather than directories full of files.  NFW

 - Fixed memory leaks with seamless tab files (bug 283)

 - Call CPLReadLine(NULL) in MIDDATAFile::Close() to cleanup working buffer.

 - Removed special bailout for m_poMAPFile == NULL in TABFile::Close().
   It is important to cleanup other used memory.

 - mitab_coordsys.cpp: fixed small memory leak for non-earth coordinate
   systems.  (bug supplied by Stephen Cheeseman, Geosoft). 

 - Added mitab_c_load_coordsys_table() to C API (bug 469)

 - mitab_ogr_datasource.cpp: Don't report single layer that hasn't been
   "created" yet via GetLayerCount().  Fixes up single file generation issues.


Version 1.2.4 (2003-07-23)